objects/Activity.object
<CustomObject>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>Marketing data</description>
        <label>utm campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <description>Marketing data</description>
        <label>utm campaign id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>Marketing data</description>
        <label>utm content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>Marketing data</description>
        <label>utm medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>Marketing data</description>
        <label>utm source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>Campaign data</description>
        <label>utm term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FastCall__ACD_Call__c</fullName>
        <label>ACD Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Answered</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FastCall__ACD_Position__c</fullName>
        <label>ACD Position</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Duration_In_Minutes__c</fullName>
        <formula>TEXT(FLOOR(CallDurationInSeconds/60)) &amp; ":" &amp;
IF(MOD(CallDurationInSeconds, 60) &lt; 10,
"0" &amp; TEXT(MOD(CallDurationInSeconds, 60)),
TEXT(MOD(CallDurationInSeconds, 60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration In Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_From__c</fullName>
        <description>Phone number used as Caller Id when calling the target phone number</description>
        <label>Call From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Call Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FastCall__Call_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Log</label>
        <referenceTo>FastCall__Connection__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Notes__c</fullName>
        <description>Notes taken by the FastCall application while on call</description>
        <label>Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Number__c</fullName>
        <label>Call Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Recording__c</fullName>
        <description>URL to the audio file containing the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Time__c</fullName>
        <formula>TEXT ( ABS ( VALUE ( MID ( TEXT ( CreatedDate ), 12, 2) ) - 7 ) ) &amp; MID ( TEXT ( CreatedDate ), 14, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_To__c</fullName>
        <description>Target phone number dialed</description>
        <label>Call To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FastCall__Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call</label>
        <referenceTo>FastCall__Call__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FastCall__From_City__c</fullName>
        <label>From City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__From_Country__c</fullName>
        <label>From Country</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Is_Voicemail_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Voicemail Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FastCall__Provider_Phone_Id__c</fullName>
        <externalId>true</externalId>
        <label>Provider Phone Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Related_Call_Id__c</fullName>
        <description>For internal use of the FastCall application</description>
        <label>Related Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__SMS_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Message</label>
        <referenceTo>FastCall__SMS_Message__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FastCall__Twillio_Billing_Info__c</fullName>
        <formula>IF( ISNULL( CallObject ) , "This Task is not a Call",  HYPERLINK("/apex/FastCall__TaskCallBillingInfo?id=" &amp;  Id , "View" , "_self") )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twilio Billing Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Voicemail_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voicemail Log</label>
        <referenceTo>FastCall__Voicemail__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FastCall__Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__Activity_Category__c</fullName>
        <label>Activity Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__Call_Duration_Sec__c</fullName>
        <label>Call Duration Sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__Call_Type__c</fullName>
        <label>Call Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__End_Result__c</fullName>
        <label>End Result</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__Interaction_Record_URL__c</fullName>
        <label>Interaction Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__fvCallDurationSec__c</fullName>
        <label>fvCallDurationSec</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharpenCTI__fvCallRecordingURL__c</fullName>
        <label>fvCallRecordingURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>